Layout for first screen

--- a/ConversationAnalysis/app/src/main/res/values/strings.xml
+++ b/ConversationAnalysis/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ConversationAnalysis</string>
+    <string name="contact">Contact Us</string>
 </resources>
