added the navigation menu (it doesn't do nagivation... yet). Also, did some styling.

--- a/ConversationAnalysis/app/src/main/res/values/strings.xml
+++ b/ConversationAnalysis/app/src/main/res/values/strings.xml
@@ -2,5 +2,9 @@
     <string name="app_name">ConversationAnalysis</string>
     <string name="contact">Contact Us</string>
     <string name="record_toast">Begin recording.</string> <!-- This is a temporary string until we implement recording. -->
-    <string name="contact_email">Donna and Bob\nplaceholder@domain.edu</string>
+    <string name="contact_email">Donna and Bob\nplaceholder@domain.edu</string> <!-- the email is a placeholder value, for now. -->
+    <string name="nav_record_title">Record Data</string>
+    <string name="nav_view_title">View Data</string>
+    <string name="open_nav_drawer">Navigation Drawer Open</string>
+    <string name="close_nav_drawer">Navigation Drawer Closed</string>
 </resources>
