--- a/ConversationAnalysis/app/src/main/res/values/strings.xml
+++ b/ConversationAnalysis/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">ConversationAnalysis</string>
     <string name="contact">Contact Us</string>
-    <string name="record_toast">Begin recording.</string> <!-- This is a temporary string until we implement recording. -->
+    <string name="error_recording">Recording discarded</string>
+    <string name="record_toast">Begin recording</string> <!-- This is a temporary string until we implement recording. -->
     <string name="contact_email">Donna and Bob\nplaceholder@domain.edu</string> <!-- the email is a placeholder value, for now. -->
     <string name="nav_record_title">Record Data</string>
     <string name="nav_view_title">View Data</string>
