--- a/ConversationAnalysis/app/src/main/res/values/strings.xml
+++ b/ConversationAnalysis/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="close_nav_drawer">Navigation Drawer Closed</string>
     <string name="error_processing">This conversation could not be processed. Try again.</string>
     <string name="successful">Data collection successful</string>
+    <string name="audio_deleted">(audio recording was deleted)</string>
     <string name="send_data">Send data for research?</string>
     <string name="send_button">Send</string>
     <string name="cancel_button">Cancel</string>
