--- a/ConversationAnalysis/app/src/main/res/values/strings.xml
+++ b/ConversationAnalysis/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="cancel_button">Cancel</string>
     <string name="upload_success">Successfully uploaded conversation.</string>
     <string name="upload_failure">Upload failed. Try again later.</string>
+    <string name="delete_button_caption">Delete</string>
 </resources>
